Fix:base z-index/home

--- a/BANGBANG/BANGPRO/BANGAPP/static/css/base.css
+++ b/BANGBANG/BANGPRO/BANGAPP/static/css/base.css
@@ -20,6 +20,7 @@ body{
 
 .nav-bar, .nav-menu{
   display: flex;
+  z-index: 1;
 }
 
 
